Fixing stretched cols
Fixing stretched cols

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,6 +22,9 @@
 
 .curvedEdge {
   border-radius :20px;
+  width: 10vw;
+  min-width: 10vw;
+  max-width: 10vw;
 }
 
 .modal {
@@ -215,6 +218,8 @@
   justify-content: center;
   display: grid;
   width: 10vw;
+  min-width: 10vw;
+  max-width: 10vw;
 }
 
 
